TerraformEnvProvisioning/AKSfiles/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: docker-registryname/backend-imagename
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "250m"         
            memory: "128Mi"     
          limits:
            cpu: "500m"         
            memory: "256Mi"     
      imagePullSecrets:
      - name: dockerhub-secret-name
