TerraformEnvProvisioning/AKSfiles/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: docker-registryname/frontend-imagename
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret-name
