TerraformEnvProvisioning/AKSfiles/portfolio-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portfolio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: portfolio
  template:
    metadata:
      labels:
        app: portfolio
    spec:
      containers:
      - name: portfolio
        image: docker-registryname/frontend-imagename
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: dockerhub-secret-name
